--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint src --max-warnings=0"
   },
+	"lint-staged": {
+		"src/**/*": ["npm run lint --fix"]
+	},
   "dependencies": {
     "next": "12.1.6",
     "react": "18.1.0",
@@ -23,8 +26,7 @@
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.30.0",
-    "eslint-plugin-react-hooks": "^4.5.0",
+    "husky": "^8.0.1",
     "prettier": "^2.6.2",
     "typescript": "4.7.2"
   }
