--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint src --max-warnings=0"
+    "lint": "eslint src --max-warnings=0",
+    "test": "jest"
   },
-	"lint-staged": {
-		"src/**/*": ["npm run lint --fix"]
-	},
+  "lint-staged": {
+    "src/**/*": [
+      "npm run lint --fix"
+    ]
+  },
   "dependencies": {
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.17.12",
+    "@types/jest": "^28.1.0",
     "@types/node": "17.0.38",
     "@types/react": "18.0.10",
     "@types/react-dom": "18.0.5",
@@ -27,6 +32,10 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^8.0.1",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
+    "jest-transform-stub": "^2.0.0",
+    "lint-staged": "^13.0.0",
     "prettier": "^2.6.2",
     "typescript": "4.7.2"
   }
