--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "lint-staged": {
     "src/**/*": [
-      "npm run lint --fix", "npm run test -- --bail"
+      "npm run lint --fix", "npm run test -- --findRelatedTests --bail"
     ]
   },
   "dependencies": {
