feat: add chakra-ui

--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "start": "next start",
     "lint": "eslint src --max-warnings=0",
     "test": "jest",
-		"test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch"
   },
   "lint-staged": {
     "src/**/*": [
-      "npm run lint --fix", "npm run test -- --findRelatedTests --bail"
+      "npm run lint --fix",
+      "npm run test -- --findRelatedTests --bail --passWithNoTests"
     ]
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.1.2",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "framer-motion": "^6.3.6",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
