--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@fontsource/nunito-sans": "^4.5.8",
     "framer-motion": "^6.3.6",
     "next": "^12.1.2",
     "react": "^17.0.2",
