--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fontsource/nunito-sans": "^4.5.8",
+    "fast-sort": "^3.2.0",
     "framer-motion": "^6.3.6",
     "next": "^12.1.2",
     "react": "^17.0.2",
